refactor: openapi 명세서 생성 및 타입 생성 추가